--- a/server/package.json
+++ b/server/package.json
@@ -34,6 +34,7 @@
     "async": "^2.6.0",
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.4.0",
