--- a/server/package.json
+++ b/server/package.json
@@ -25,43 +25,17 @@
   },
   "homepage": "https://github.com/swarup4/shoping-cart#readme",
   "dependencies": {
-    "angular": "^1.6.9",
-    "angular-animate": "^1.7.5",
-    "angular-aria": "^1.7.5",
-    "angular-material": "^1.1.7",
-    "angular-messages": "^1.7.5",
-    "angular-ui-router": "^1.0.20",
-    "async": "^2.6.0",
-    "bcrypt": "^1.0.3",
+    "async": "^2.6.2",
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "jsonwebtoken": "^8.4.0",
-    "less": "^2.7.2",
-    "mongoose": "^5.0.4",
-    "multer": "^1.3.0",
-    "nodemon": "^1.14.12",
+    "jsonwebtoken": "^8.5.0",
+    "lodash": "^4.17.11",
+    "mongoose": "^5.4.17",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "passport": "^0.4.0",
-    "q": "^1.5.1",
-    "socket.io": "^2.0.4",
-    "ws": "^4.0.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-watch": "^2.0.7",
-    "babelify": "^8.0.0",
-    "browserify": "^16.1.0",
-    "browserify-ngannotate": "^2.0.0",
-    "concurrently": "^3.6.1",
-    "gulp": "^3.9.1",
-    "gulp-babel": "^7.0.1",
-    "gulp-clean-css": "^3.9.2",
-    "gulp-concat": "^2.6.1",
-    "gulp-less": "^3.5.0",
-    "gulp-uglify": "^3.0.1",
-    "vinyl-source-stream": "^2.0.0"
+    "socket.io": "^2.2.0"
   }
 }
